--- a/AppChat/package.json
+++ b/AppChat/package.json
@@ -14,12 +14,17 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
+    "expo-permissions": "^10.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-button": "^3.0.1",
+    "react-native-dropdown-picker": "^3.7.8",
+    "react-native-emoji-board": "^1.2.1",
+    "react-native-emoji-input": "^1.1.10",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-picker": "^3.1.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.5.0",
     "react-native-reanimated": "~1.13.0",
